嵌套页面公共模块

--- a/public/wechat/css/common.css
+++ b/public/wechat/css/common.css
@@ -647,7 +647,7 @@ h1, h2, h3 {
 
 .page-index .list .img .ico {
     /*width: 100%;*/
-    max-height: 83px;
+    height: 100%;
 }
 
 .page-index .list .info {
@@ -1560,7 +1560,10 @@ h1, h2, h3 {
 }
 
 /*地址管理*/
-
+.page-address-list {
+    background-color: #fff;
+    padding-bottom: 1.2rem;
+}
 .ui-card {
     border: 1px solid #f6f6f6;
     overflow: hidden;
@@ -1604,7 +1607,7 @@ h1, h2, h3 {
     padding: .2rem .3rem;
 }
 
-.page-address-list .address-manage .identity a {
+.page-address-list .address-manage .identity a.delete {
     float: right;
     color: #999;
 }
